PRSUM-10469: Adding final adjustments for relation and additions support in legal entities